# hotline_agent

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
script/: run.sh
script/delete-rooms/: app.py
src/: __init__.py  bot-gemini.py  bot_gemini.py  bot_openai.py  energy_vad_analyzer.py  main.py  models.py  rooms.py  runner.py  supabase_README.md  supabase_example.py  supabase_interface.py  utils.py  vercel.py  webrtc_vad_analyzer.py
src/helpers/: datetime.py
src/hotline_agent/: main.py
src/migrations/: add_transcript_to_conversations.sql  create_conversations_table.sql
src/prompts/: greeting.txt  system.txt
src/ui/: .env.example  .gitignore  git-version.env  index.html  vite.config.ts
src/ui/src/: App.css  App.tsx  env.d.ts
src/ui/src/components/: WelcomeContent.css  WelcomeContent.tsx
src/ui/src/providers/: RTVIProvider.tsx
